FindBugs cleanups